--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 			<version>${sl4j-version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
+		</dependency>
 	</dependencies>
 
 
